[package]
name = "sjiswrap"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.72"
encoding_rs = "0.8.32"
itertools = "0.11.0"
lazy_static = "1.4.0"
memexec = { version = "0.2.0", features = ["hook"] }

[dependencies.windows]
version = "0.48.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Environment",
    "Win32_System_IO",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
]
