[package]
name = "sjiswrap"
description = "UTF-8 to Shift JIS wrapper for old compilers."
authors = ["Luke Street <luke@street.dev>"]
license = "MIT OR Apache-2.0"
version = "1.1.0"
edition = "2021"
publish = false
repository = "https://github.com/encounter/sjiswrap"
readme = "README.md"
categories = ["command-line-utilities"]

# Size optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"

[features]
debug = []

[dependencies]
anyhow = "1.0.72"
encoding_rs = { version = "0.8.32", features = ["simd-accel", "fast-kanji-encode"] }
memexec = { version = "0.2.0", features = ["hook"] }
rustc-hash = "1.1.0"

[dependencies.windows]
version = "0.48.0"
features = [
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Environment",
    "Win32_System_IO",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
]
