[package]
name = "sjiswrap"
description = "UTF-8 to Shift JIS wrapper for old compilers."
authors = ["Luke Street <luke@street.dev>"]
license = "MIT OR Apache-2.0"
version = "1.2.0"
edition = "2021"
publish = false
repository = "https://github.com/encounter/sjiswrap"
readme = "README.md"
categories = ["command-line-utilities"]
rust-version = "1.72.0"

# Size optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"

[features]
debug = []
nightly = [
    "encoding_rs/simd-accel",
    "encoding_rs/fast-kanji-encode",
]

[dependencies]
anyhow = "1.0"
encoding_rs = "0.8"
memexec = { version = "0.2", features = ["hook"] }
num = "0.4"
rustc-hash = "2.0"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Environment",
    "Win32_System_IO",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
]
